--- a/git.html
+++ b/git.html
@@ -9,6 +9,7 @@
     <h2>Ola mundo Git</h2>
     <p>comitando alterações git</p>
     <p>Entranto para o github</p>
-    <p>Agora vai carai</p>
+    <p>Agora vai</p>
+    <p>Recode pro é braba!</p>
 </body>
 </html>
